@@ -1,4 +1,4 @@
-<option type="enum" id="opt/161">
+<option type="enum" id="opt/Postscript-InputSlot">
   <!-- A multilingual <comments> block can appear here, too;
        it should be treated as documentation for the user. -->
   <arg_longname>
