@@ -1,4 +1,4 @@
-<option type="enum" id="opt/bjc250gs-ComposedBlack">
+<option type="enum" id="opt/bjc250gs-ComposeK">
   <!-- A multilingual <comments> block can appear here, too;
        it should be treated as documentation for the user. -->
   <arg_longname>
