@@ -1,4 +1,4 @@
-<option type="int" id="opt/pentaxpj-OutputType">
+<option type="int" id="opt/pentaxpj-Density">
   <!-- A multilingual <comments> block can appear here, too;
        it should be treated as documentation for the user. -->
   <arg_longname>
