@@ -1,6 +1,10 @@
 2009-08-17  Till Kamppeter <till.kamppeter@gmail.com>
 
-	* opt/Postscript-PageSize.xml, opt/Postscript-Duplex.xml: Corrected ID.
+	* opt/min12xxw-GSPageSize.xml: Removed duplicate choice entry.
+
+	* opt/Postscript-PageSize.xml, opt/Postscript-Duplex.xml,
+	  opt/Postscript-InputSlot.xml, opt/pentaxpj-Density.xml,
+	  opt/bjc250gs-ComposeK.xml: Corrected ID.
 
 	* driver/hplip.xml, printer/HP-910.xml, printer/HP-915.xml,
 	  printer/HP-Business_Inkjet_1000.xml,
